Bug 501336 - Adding remote iCal does not automatically enable read only option preventing sync
Summary: Adding remote iCal does not automatically enable read only option preventing ...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.3.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-11 08:49 UTC by Saihaj Johal
Modified: 2025-04-25 16:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Saihaj Johal 2025-03-11 08:49:26 UTC
SUMMARY
When adding a remote iCal file using a URL, the read only option, which is needed for the calendar to sync properly, is not enabled despite what is stated in the dialogue box. Without ticking this box, Akonadi is unable to sync the calendar as it gets stuck trying to write to a read only calendar.

STEPS TO REPRODUCE
1. Go to calendars section of KOrganizer
2. Add "iCal Calendar File"
3. Enter URL linking to a .ics file

OBSERVED RESULT
"Read only" box remains unticked.

EXPECTED RESULT
"Read only" box is ticked automatically to allow the calendar to sync.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.3.2
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Comment 1 Allen Winter 2025-04-25 12:46:58 UTC
I verify that if the file is not marked as read-only in the Add "iCal Calendar File" configuration then it isn't added properly.
if I click the read-only box by hand then it works ok.

is that what you're seeing too?
Comment 2 Saihaj Johal 2025-04-25 12:48:09 UTC
(In reply to Allen Winter from comment #1)
> I verify that if the file is not marked as read-only in the Add "iCal
> Calendar File" configuration then it isn't added properly.
> if I click the read-only box by hand then it works ok.
> 
> is that what you're seeing too?

Yes, this is the behaviour I am seeing.
Comment 3 Bug Janitor Service 2025-04-25 14:32:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/222
Comment 4 Allen Winter 2025-04-25 16:11:21 UTC
Git commit 2a7f16b859f1e92d87b28c73484bf31dbc2d1634 by Allen Winter.
Committed on 25/04/2025 at 14:27.
Pushed by winterz into branch 'master'.

singlefileresourceconfigwidgetbase.cpp - remotes are always read-only

Remote files must be read-only else the resource doesn't work.
The dialog itself says "Read-only mode is automatically enabled
when displaying a calendar from a remote URL".

Users can still toggle read-only for local files.

M  +8    -0    resources/shared/singlefileresource/singlefileresourceconfigwidgetbase.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/2a7f16b859f1e92d87b28c73484bf31dbc2d1634
Comment 5 Allen Winter 2025-04-25 16:11:41 UTC
Git commit 4c0d9b4c8254267ba2297e77076caa8845a9701e by Allen Winter.
Committed on 25/04/2025 at 16:11.
Pushed by winterz into branch 'release/25.04'.

singlefileresourceconfigwidgetbase.cpp - remotes are always read-only

Remote files must be read-only else the resource doesn't work.
The dialog itself says "Read-only mode is automatically enabled
when displaying a calendar from a remote URL".

Users can still toggle read-only for local files.


(cherry picked from commit 2a7f16b859f1e92d87b28c73484bf31dbc2d1634)

Co-authored-by: Allen Winter <winter@kde.org>

M  +8    -0    resources/shared/singlefileresource/singlefileresourceconfigwidgetbase.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/4c0d9b4c8254267ba2297e77076caa8845a9701e