singlefileresourceconfigwidgetbase.cpp - remotes are always read-only

Remote files must be read-only else the resource doesn't work.
The dialog itself says "Read-only mode is automatically enabled
when displaying a calendar from a remote URL".

Users can still toggle read-only for local files.

BUG: 501336


(cherry picked from commit 2a7f16b859f1e92d87b28c73484bf31dbc2d1634)

Co-authored-by: Allen Winter <winter@kde.org>